# moose-knowledge-assistant

./: .env.example  .gitattributes  .gitignore  IDEA.md  Procfile  README.md  build.sh  main.py  pyproject.toml  railpack.json  railway.toml  requirements.txt  start.sh
backend/: pyproject.toml  railway.toml  requirements.txt
backend/app/: chat.html  config.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  documents.py  query.py  router.py
backend/app/core/citation/: __init__.py
backend/app/core/generation/: __init__.py  llm_adapter.py
backend/app/core/ingestion/: chunker.py  classifier.py  document_loader.py  embedder.py  ocr_engine.py  pipeline.py  structure_extractor.py
backend/app/core/retrieval/: __init__.py  faiss_retriever.py  hybrid_retriever.py  vector_store.py
backend/app/models/: __init__.py
backend/app/utils/: exceptions.py  logging.py
backend/backend/: pyproject.toml  requirements.txt
backend/tests/: conftest.py
backend/tests/unit/: test_chunker.py  test_classifier.py  test_document_loader.py  test_structure_extractor.py
data/faiss_index/: faiss.index  metadata.json  store_info.json
docker/: docker-compose.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/admin/: ActivityList.tsx  StatsCard.tsx
frontend/components/chat/: ChatInput.tsx  CitationCard.tsx  ConfidenceBadge.tsx  EmptyState.tsx  MessageList.tsx
frontend/components/layout/: Sidebar.tsx
frontend/lib/: api.ts  types.ts
scripts/: build_combined_index.py  build_index.py  demo.py  download_gl.py  ingest_all.py  run_pipeline_e2e.py
