[project]
name = "moose-knowledge-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.35",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "structlog>=24.4",
    "tenacity>=8.4",
    "tiktoken>=0.7",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
serve = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
