[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moose-knowledge-assistant"
version = "0.1.0"
description = "AI-powered knowledge assistant for the Loyal Order of Moose"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose>=3.3",
    "httpx>=0.27",
    "openai>=1.35",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pytesseract>=0.3",
    "Pillow>=10.3",
    "opencv-python-headless>=4.10",
    "tiktoken>=0.7",
    "tenacity>=8.4",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*", "workers", "workers.*"]
